spade-tests/src/snapshots/spade_tests__ast_lowering__builtin_fn_methods_produce_error.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct X {}
impl X {
    fn x(self, x: bool) -> bool __builtin__
}


error: Methods can not be __builtin__
  ┌─ testinput:3:5
  │
3 │     fn x(self, x: bool) -> bool __builtin__
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │
  = help: Consider defining a free-standing function


