spade-tests/src/snapshots/spade_tests__ast_lowering__builtin_pipeline_methods_produce_error.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct X {}
impl X {
    // NOTE: This error should change once
    // pipelines as methods are added
    pipeline(1) x(self, x: bool) -> bool __builtin__
}


error: Pipelines are currently not allowed in impl blocks
  ┌─ testinput:5:5
  │
5 │     pipeline(1) x(self, x: bool) -> bool __builtin__
  │     ^^^^^^^^^^^ Not allowed here
  │
  = note: This limitation is likely to be lifted in the future
  = help: Consider defining a free-standing pipeline for now


