spade-tests/src/snapshots/spade_tests__ast_lowering__comptime_pipeline_depth_works.snap
---
source: spade-tests/src/ast_lowering.rs
---
$config X = 1

pipeline($if X == 1 {3} $else {2}) test(clk: clock) -> bool {
    reg*2;
        true
}


error: Wrong number of pipeline stages
  ┌─ testinput:3:61
  │  
3 │   pipeline($if X == 1 {3} $else {2}) test(clk: clock) -> bool {
  │                        - 3 stages specified here
  │ ╭─────────────────────────────────────────────────────────────^
4 │ │     reg*2;
5 │ │         true
6 │ │ }
  │ ╰─^ Found 2 stages here


