spade-tests/src/snapshots/spade_tests__ast_lowering__comptime_pipeline_inst_depth_missing_depth_gives_decent_error.snap
---
source: spade-tests/src/ast_lowering.rs
---
$config X = 0

pipeline(2) test(clk: clock) -> bool {
    reg*2;
        true
}

entity main(clk: clock) -> bool {
    inst($if X == 1 {3}) test(clk)
}


error: Expected pipeline depth
  ┌─ testinput:9:10
  │
9 │     inst($if X == 1 {3}) test(clk)
  │          ^^^^^^^^^^^^^^
  │
  = help: The current comptime branch did not specify a depth


