spade-tests/src/snapshots/spade_tests__ast_lowering__condition_on_multiplied_stage_is_disallowed.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(3) x(clk: clock) -> bool {
    reg[false]*3;
        false
}


error: Multiple registers with conditions can not be defined
  ┌─ testinput:2:16
  │
2 │     reg[false]*3;
  │         -----  ^ Multiple registers not allowed
  │         │       
  │         Condition specified here
  │
  = help: Consider splitting into two reg statements
