spade-tests/src/snapshots/spade_tests__ast_lowering__condition_on_multiplied_stage_is_disallowed_single_extra_stage.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(2) x(clk: clock) -> bool {
    reg[false]*2;
        false
}


error: Multiple registers with conditions can not be defined
  ┌─ testinput:2:16
  │
2 │     reg[false]*2;
  │         -----  ^ Multiple registers not allowed
  │         │       
  │         Condition specified here
  │
  = Consider splitting into two reg statements
  │
2 │     reg[...]; reg;
  │     ~~~~~~~~~~~~~


