spade-tests/src/snapshots/spade_tests__ast_lowering__const_generic_is_not_allowed_in_enum_definition.snap
---
source: spade-tests/src/ast_lowering.rs
---
enum X {
    A{val: int<{1+2}>}
}


error: Argument types cannot have const generics in their type
  ┌─ testinput:2:17
  │
2 │     A{val: int<{1+2}>}
  │                 ^^^ Const generic in argument type
