spade-tests/src/snapshots/spade_tests__ast_lowering__const_generic_is_not_allowed_in_function_type.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn test(x: int<{1+2}>) {}


error: Argument types cannot have const generics in their type
  ┌─ testinput:1:17
  │
1 │ fn test(x: int<{1+2}>) {}
  │                 ^^^ Const generic in argument type
