spade-tests/src/snapshots/spade_tests__ast_lowering__const_generic_is_not_allowed_in_impl_target.snap
---
source: spade-tests/src/ast_lowering.rs
---
trait T {}
impl T for int<{1+2}> {}


error: Impl targets cannot have const generics in their type
  ┌─ testinput:2:17
  │
2 │ impl T for int<{1+2}> {}
  │                 ^^^ Const generic in impl target
